# flask-todo-api

./: .coverage  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: test.yml
src/: app.py  config.py
src/api/routes/: todo.py
src/api/schemas/: todo.py
src/repositories/: todo_repository.py
src/services/: todo_service.py
tests/: conftest.py  test_todo.py
tests/todo/task_id/: test_delete_task.py  test_get_task.py  test_update_task.py
tests/todo/tasks/: test_create_task.py  test_invalid_method.py  test_invalid_params.py  test_list_tasks.py  test_order_by.py
